--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development --progress --watch",
+    "precommit": "pretty-quick --staged",
     "start": "webpack-dev-server --mode development --inline --content-base --watch."
   },
   "author": "L",
@@ -24,7 +25,10 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.0",
     "node-sass": "^4.9.0",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.1",
